vendor/linux/x64/ftd2xx.h

/** @} */

/** @{ 
 * @name Device Types
 * @details Known supported FTDI device types supported by this library.
 */
typedef ULONG	FT_DEVICE;


	/**  @noop FT_EEPROM_HEADER
	 * @par Summary
	 * Structure to hold data for FT_EEPROM_Program and FT_EEPROM_Read functions.
	 * The structure for the command includes one FT_EEPROM_HEADER with a device-specific
	 * structure appended.
	 * @see FT_EEPROM_Read
	 * @see FT_EEPROM_Program
	 */
	typedef struct ft_eeprom_header {
		FT_DEVICE deviceType;		/// FTxxxx device type to be programmed
		/// Device descriptor options
		WORD VendorId;				/// 0x0403
		WORD ProductId;				/// 0x6001
		UCHAR SerNumEnable;			/// non-zero if serial number to be used
		/// Config descriptor options
		WORD MaxPower;				/// 0 < MaxPower <= 500
		UCHAR SelfPowered;			/// 0 = bus powered, 1 = self powered
		UCHAR RemoteWakeup;			/// 0 = not capable, 1 = capable
		/// Hardware options
		UCHAR PullDownEnable;		/// non-zero if pull down in suspend enabled
	} FT_EEPROM_HEADER, *PFT_EEPROM_HEADER;


	/**  @noop FT_EEPROM_232R
	 * @par Summary
	 * Structure to hold data for the FT232R data in the FT_EEPROM_Program and FT_EEPROM_Read functions.
	 * This is appended to an FT_EEPROM_HEADER structure.
	 * @see FT_EEPROM_HEADER
	 */
	typedef struct ft_eeprom_232r {
		/// Common header
		FT_EEPROM_HEADER common;	/// common elements for all device EEPROMs
		/// Drive options
		UCHAR IsHighCurrent;		/// non-zero if interface is high current
		/// Hardware options
		UCHAR UseExtOsc;			/// Use External Oscillator
		UCHAR InvertTXD;			/// non-zero if invert TXD
		UCHAR InvertRXD;			/// non-zero if invert RXD
		UCHAR InvertRTS;			/// non-zero if invert RTS
		UCHAR InvertCTS;			/// non-zero if invert CTS
		UCHAR InvertDTR;			/// non-zero if invert DTR
		UCHAR InvertDSR;			/// non-zero if invert DSR
		UCHAR InvertDCD;			/// non-zero if invert DCD
		UCHAR InvertRI;				/// non-zero if invert RI
		UCHAR Cbus0;				/// Cbus Mux control
		UCHAR Cbus1;				/// Cbus Mux control
		UCHAR Cbus2;				/// Cbus Mux control
		UCHAR Cbus3;				/// Cbus Mux control
		UCHAR Cbus4;				/// Cbus Mux control
		/// Driver option
		UCHAR DriverType;			/// non-zero if using D2XX driver
	} FT_EEPROM_232R, *PFT_EEPROM_232R;


	/**  @noop FT_EEPROM_2232H
	 * @par Summary
	 * Structure to hold data for the FT2232H data in the FT_EEPROM_Program and FT_EEPROM_Read functions.
	 * This is appended to an FT_EEPROM_HEADER structure.
	 * @see FT_EEPROM_HEADER
	 */
	typedef struct ft_eeprom_2232h {
		/// Common header
		FT_EEPROM_HEADER common;	/// common elements for all device EEPROMs
		/// Drive options
		UCHAR ALSlowSlew;			/// non-zero if AL pins have slow slew
		UCHAR ALSchmittInput;		/// non-zero if AL pins are Schmitt input
		UCHAR ALDriveCurrent;		/// valid values are 4mA, 8mA, 12mA, 16mA
		UCHAR AHSlowSlew;			/// non-zero if AH pins have slow slew
		UCHAR AHSchmittInput;		/// non-zero if AH pins are Schmitt input
		UCHAR AHDriveCurrent;		/// valid values are 4mA, 8mA, 12mA, 16mA
		UCHAR BLSlowSlew;			/// non-zero if BL pins have slow slew
		UCHAR BLSchmittInput;		/// non-zero if BL pins are Schmitt input
		UCHAR BLDriveCurrent;		/// valid values are 4mA, 8mA, 12mA, 16mA
		UCHAR BHSlowSlew;			/// non-zero if BH pins have slow slew
		UCHAR BHSchmittInput;		/// non-zero if BH pins are Schmitt input
		UCHAR BHDriveCurrent;		/// valid values are 4mA, 8mA, 12mA, 16mA
		/// Hardware options
		UCHAR AIsFifo;				/// non-zero if interface is 245 FIFO
		UCHAR AIsFifoTar;			/// non-zero if interface is 245 FIFO CPU target
		UCHAR AIsFastSer;			/// non-zero if interface is Fast serial
		UCHAR BIsFifo;				/// non-zero if interface is 245 FIFO
		UCHAR BIsFifoTar;			/// non-zero if interface is 245 FIFO CPU target
		UCHAR BIsFastSer;			/// non-zero if interface is Fast serial
		UCHAR PowerSaveEnable;		/// non-zero if using BCBUS7 to save power for self-powered designs
		/// Driver option
		UCHAR ADriverType;			/// non-zero if interface is to use VCP drivers
		UCHAR BDriverType;			/// non-zero if interface is to use VCP drivers
	} FT_EEPROM_2232H, *PFT_EEPROM_2232H;


	/**  @noop FT_EEPROM_4232H
	 * @par Summary
	 * Structure to hold data for the FT4232H data in the FT_EEPROM_Program and FT_EEPROM_Read functions.
	 * This is appended to an FT_EEPROM_HEADER structure.
	 * @see FT_EEPROM_HEADER
	 */
	typedef struct ft_eeprom_4232h {
		/// Common header
		FT_EEPROM_HEADER common;	/// common elements for all device EEPROMs
		/// Drive options
		UCHAR ASlowSlew;			/// non-zero if A pins have slow slew
		UCHAR ASchmittInput;		/// non-zero if A pins are Schmitt input
		UCHAR ADriveCurrent;		/// valid values are 4mA, 8mA, 12mA, 16mA
		UCHAR BSlowSlew;			/// non-zero if B pins have slow slew
		UCHAR BSchmittInput;		/// non-zero if B pins are Schmitt input
		UCHAR BDriveCurrent;		/// valid values are 4mA, 8mA, 12mA, 16mA
		UCHAR CSlowSlew;			/// non-zero if C pins have slow slew
		UCHAR CSchmittInput;		/// non-zero if C pins are Schmitt input
		UCHAR CDriveCurrent;		/// valid values are 4mA, 8mA, 12mA, 16mA
		UCHAR DSlowSlew;			/// non-zero if D pins have slow slew
		UCHAR DSchmittInput;		/// non-zero if D pins are Schmitt input
		UCHAR DDriveCurrent;		/// valid values are 4mA, 8mA, 12mA, 16mA
		/// Hardware options
		UCHAR ARIIsTXDEN;			/// non-zero if port A uses RI as RS485 TXDEN
		UCHAR BRIIsTXDEN;			/// non-zero if port B uses RI as RS485 TXDEN
		UCHAR CRIIsTXDEN;			/// non-zero if port C uses RI as RS485 TXDEN
		UCHAR DRIIsTXDEN;			/// non-zero if port D uses RI as RS485 TXDEN
		/// Driver option
		UCHAR ADriverType;			/// non-zero if interface is to use VCP drivers
		UCHAR BDriverType;			/// non-zero if interface is to use VCP drivers
		UCHAR CDriverType;			/// non-zero if interface is to use VCP drivers
		UCHAR DDriverType;			/// non-zero if interface is to use VCP drivers
	} FT_EEPROM_4232H, *PFT_EEPROM_4232H;


	/**  @noop FT_EEPROM_232H
	 * @par Summary
	 * Structure to hold data for the FT232H data in the FT_EEPROM_Program and FT_EEPROM_Read functions.
	 * This is appended to an FT_EEPROM_HEADER structure.
	 * @see FT_EEPROM_HEADER
	 */
	typedef struct ft_eeprom_232h {
		/// Common header
		FT_EEPROM_HEADER common;	/// common elements for all device EEPROMs
		/// Drive options
		UCHAR ACSlowSlew;			/// non-zero if AC bus pins have slow slew
		UCHAR ACSchmittInput;		/// non-zero if AC bus pins are Schmitt input
		UCHAR ACDriveCurrent;		/// valid values are 4mA, 8mA, 12mA, 16mA
		UCHAR ADSlowSlew;			/// non-zero if AD bus pins have slow slew
		UCHAR ADSchmittInput;		/// non-zero if AD bus pins are Schmitt input
		UCHAR ADDriveCurrent;		/// valid values are 4mA, 8mA, 12mA, 16mA
		/// CBUS options
		UCHAR Cbus0;				/// Cbus Mux control
		UCHAR Cbus1;				/// Cbus Mux control
		UCHAR Cbus2;				/// Cbus Mux control
		UCHAR Cbus3;				/// Cbus Mux control
		UCHAR Cbus4;				/// Cbus Mux control
		UCHAR Cbus5;				/// Cbus Mux control
		UCHAR Cbus6;				/// Cbus Mux control
		UCHAR Cbus7;				/// Cbus Mux control
		UCHAR Cbus8;				/// Cbus Mux control
		UCHAR Cbus9;				/// Cbus Mux control
		/// FT1248 options
		UCHAR FT1248Cpol;			/// FT1248 clock polarity - clock idle high (1) or clock idle low (0)
		UCHAR FT1248Lsb;			/// FT1248 data is LSB (1) or MSB (0)
		UCHAR FT1248FlowControl;	/// FT1248 flow control enable
		/// Hardware options
		UCHAR IsFifo;				/// non-zero if interface is 245 FIFO
		UCHAR IsFifoTar;			/// non-zero if interface is 245 FIFO CPU target
		UCHAR IsFastSer;			/// non-zero if interface is Fast serial
		UCHAR IsFT1248;			/// non-zero if interface is FT1248
		UCHAR PowerSaveEnable;		/// 
		/// Driver option
		UCHAR DriverType;			/// non-zero if interface is to use VCP drivers
	} FT_EEPROM_232H, *PFT_EEPROM_232H;