src/bindings_windows_x86.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ft_eeprom_232r"][::std::mem::size_of::<ft_eeprom_232r>() - 32usize];
    ["Alignment of ft_eeprom_232r"][::std::mem::align_of::<ft_eeprom_232r>() - 4usize];
    ["Offset of field: ft_eeprom_232r::common"]
        [::std::mem::offset_of!(ft_eeprom_232r, common) - 0usize];
    ["Offset of field: ft_eeprom_232r::IsHighCurrent"]
        [::std::mem::offset_of!(ft_eeprom_232r, IsHighCurrent) - 16usize];
    ["Offset of field: ft_eeprom_232r::UseExtOsc"]
        [::std::mem::offset_of!(ft_eeprom_232r, UseExtOsc) - 17usize];
    ["Offset of field: ft_eeprom_232r::InvertTXD"]
        [::std::mem::offset_of!(ft_eeprom_232r, InvertTXD) - 18usize];
    ["Offset of field: ft_eeprom_232r::InvertRXD"]
        [::std::mem::offset_of!(ft_eeprom_232r, InvertRXD) - 19usize];
    ["Offset of field: ft_eeprom_232r::InvertRTS"]
        [::std::mem::offset_of!(ft_eeprom_232r, InvertRTS) - 20usize];
    ["Offset of field: ft_eeprom_232r::InvertCTS"]
        [::std::mem::offset_of!(ft_eeprom_232r, InvertCTS) - 21usize];
    ["Offset of field: ft_eeprom_232r::InvertDTR"]
        [::std::mem::offset_of!(ft_eeprom_232r, InvertDTR) - 22usize];
    ["Offset of field: ft_eeprom_232r::InvertDSR"]
        [::std::mem::offset_of!(ft_eeprom_232r, InvertDSR) - 23usize];
    ["Offset of field: ft_eeprom_232r::InvertDCD"]
        [::std::mem::offset_of!(ft_eeprom_232r, InvertDCD) - 24usize];
    ["Offset of field: ft_eeprom_232r::InvertRI"]
        [::std::mem::offset_of!(ft_eeprom_232r, InvertRI) - 25usize];
    ["Offset of field: ft_eeprom_232r::Cbus0"]
        [::std::mem::offset_of!(ft_eeprom_232r, Cbus0) - 26usize];
    ["Offset of field: ft_eeprom_232r::Cbus1"]
        [::std::mem::offset_of!(ft_eeprom_232r, Cbus1) - 27usize];
    ["Offset of field: ft_eeprom_232r::Cbus2"]
        [::std::mem::offset_of!(ft_eeprom_232r, Cbus2) - 28usize];
    ["Offset of field: ft_eeprom_232r::Cbus3"]
        [::std::mem::offset_of!(ft_eeprom_232r, Cbus3) - 29usize];
    ["Offset of field: ft_eeprom_232r::Cbus4"]
        [::std::mem::offset_of!(ft_eeprom_232r, Cbus4) - 30usize];
    ["Offset of field: ft_eeprom_232r::DriverType"]
        [::std::mem::offset_of!(ft_eeprom_232r, DriverType) - 31usize];
};
pub type FT_EEPROM_232R = ft_eeprom_232r;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct ft_eeprom_2232h {
    pub common: FT_EEPROM_HEADER,
    pub ALSlowSlew: UCHAR,
    pub ALSchmittInput: UCHAR,
    pub ALDriveCurrent: UCHAR,
    pub AHSlowSlew: UCHAR,
    pub AHSchmittInput: UCHAR,
    pub AHDriveCurrent: UCHAR,
    pub BLSlowSlew: UCHAR,
    pub BLSchmittInput: UCHAR,
    pub BLDriveCurrent: UCHAR,
    pub BHSlowSlew: UCHAR,
    pub BHSchmittInput: UCHAR,
    pub BHDriveCurrent: UCHAR,
    pub AIsFifo: UCHAR,
    pub AIsFifoTar: UCHAR,
    pub AIsFastSer: UCHAR,
    pub BIsFifo: UCHAR,
    pub BIsFifoTar: UCHAR,
    pub BIsFastSer: UCHAR,
    pub PowerSaveEnable: UCHAR,
    pub ADriverType: UCHAR,
    pub BDriverType: UCHAR,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ft_eeprom_2232h"][::std::mem::size_of::<ft_eeprom_2232h>() - 40usize];
    ["Alignment of ft_eeprom_2232h"][::std::mem::align_of::<ft_eeprom_2232h>() - 4usize];
    ["Offset of field: ft_eeprom_2232h::common"]
        [::std::mem::offset_of!(ft_eeprom_2232h, common) - 0usize];
    ["Offset of field: ft_eeprom_2232h::ALSlowSlew"]
        [::std::mem::offset_of!(ft_eeprom_2232h, ALSlowSlew) - 16usize];
    ["Offset of field: ft_eeprom_2232h::ALSchmittInput"]
        [::std::mem::offset_of!(ft_eeprom_2232h, ALSchmittInput) - 17usize];
    ["Offset of field: ft_eeprom_2232h::ALDriveCurrent"]
        [::std::mem::offset_of!(ft_eeprom_2232h, ALDriveCurrent) - 18usize];
    ["Offset of field: ft_eeprom_2232h::AHSlowSlew"]
        [::std::mem::offset_of!(ft_eeprom_2232h, AHSlowSlew) - 19usize];
    ["Offset of field: ft_eeprom_2232h::AHSchmittInput"]
        [::std::mem::offset_of!(ft_eeprom_2232h, AHSchmittInput) - 20usize];
    ["Offset of field: ft_eeprom_2232h::AHDriveCurrent"]
        [::std::mem::offset_of!(ft_eeprom_2232h, AHDriveCurrent) - 21usize];
    ["Offset of field: ft_eeprom_2232h::BLSlowSlew"]
        [::std::mem::offset_of!(ft_eeprom_2232h, BLSlowSlew) - 22usize];
    ["Offset of field: ft_eeprom_2232h::BLSchmittInput"]
        [::std::mem::offset_of!(ft_eeprom_2232h, BLSchmittInput) - 23usize];
    ["Offset of field: ft_eeprom_2232h::BLDriveCurrent"]
        [::std::mem::offset_of!(ft_eeprom_2232h, BLDriveCurrent) - 24usize];
    ["Offset of field: ft_eeprom_2232h::BHSlowSlew"]
        [::std::mem::offset_of!(ft_eeprom_2232h, BHSlowSlew) - 25usize];
    ["Offset of field: ft_eeprom_2232h::BHSchmittInput"]
        [::std::mem::offset_of!(ft_eeprom_2232h, BHSchmittInput) - 26usize];
    ["Offset of field: ft_eeprom_2232h::BHDriveCurrent"]
        [::std::mem::offset_of!(ft_eeprom_2232h, BHDriveCurrent) - 27usize];
    ["Offset of field: ft_eeprom_2232h::AIsFifo"]
        [::std::mem::offset_of!(ft_eeprom_2232h, AIsFifo) - 28usize];
    ["Offset of field: ft_eeprom_2232h::AIsFifoTar"]
        [::std::mem::offset_of!(ft_eeprom_2232h, AIsFifoTar) - 29usize];
    ["Offset of field: ft_eeprom_2232h::AIsFastSer"]
        [::std::mem::offset_of!(ft_eeprom_2232h, AIsFastSer) - 30usize];
    ["Offset of field: ft_eeprom_2232h::BIsFifo"]
        [::std::mem::offset_of!(ft_eeprom_2232h, BIsFifo) - 31usize];
    ["Offset of field: ft_eeprom_2232h::BIsFifoTar"]
        [::std::mem::offset_of!(ft_eeprom_2232h, BIsFifoTar) - 32usize];
    ["Offset of field: ft_eeprom_2232h::BIsFastSer"]
        [::std::mem::offset_of!(ft_eeprom_2232h, BIsFastSer) - 33usize];
    ["Offset of field: ft_eeprom_2232h::PowerSaveEnable"]
        [::std::mem::offset_of!(ft_eeprom_2232h, PowerSaveEnable) - 34usize];
    ["Offset of field: ft_eeprom_2232h::ADriverType"]
        [::std::mem::offset_of!(ft_eeprom_2232h, ADriverType) - 35usize];
    ["Offset of field: ft_eeprom_2232h::BDriverType"]
        [::std::mem::offset_of!(ft_eeprom_2232h, BDriverType) - 36usize];
};
pub type FT_EEPROM_2232H = ft_eeprom_2232h;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct ft_eeprom_4232h {
    pub common: FT_EEPROM_HEADER,
    pub ASlowSlew: UCHAR,
    pub ASchmittInput: UCHAR,
    pub ADriveCurrent: UCHAR,
    pub BSlowSlew: UCHAR,
    pub BSchmittInput: UCHAR,
    pub BDriveCurrent: UCHAR,
    pub CSlowSlew: UCHAR,
    pub CSchmittInput: UCHAR,
    pub CDriveCurrent: UCHAR,
    pub DSlowSlew: UCHAR,
    pub DSchmittInput: UCHAR,
    pub DDriveCurrent: UCHAR,
    pub ARIIsTXDEN: UCHAR,
    pub BRIIsTXDEN: UCHAR,
    pub CRIIsTXDEN: UCHAR,
    pub DRIIsTXDEN: UCHAR,
    pub ADriverType: UCHAR,
    pub BDriverType: UCHAR,
    pub CDriverType: UCHAR,
    pub DDriverType: UCHAR,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ft_eeprom_4232h"][::std::mem::size_of::<ft_eeprom_4232h>() - 36usize];
    ["Alignment of ft_eeprom_4232h"][::std::mem::align_of::<ft_eeprom_4232h>() - 4usize];
    ["Offset of field: ft_eeprom_4232h::common"]
        [::std::mem::offset_of!(ft_eeprom_4232h, common) - 0usize];
    ["Offset of field: ft_eeprom_4232h::ASlowSlew"]
        [::std::mem::offset_of!(ft_eeprom_4232h, ASlowSlew) - 16usize];
    ["Offset of field: ft_eeprom_4232h::ASchmittInput"]
        [::std::mem::offset_of!(ft_eeprom_4232h, ASchmittInput) - 17usize];
    ["Offset of field: ft_eeprom_4232h::ADriveCurrent"]
        [::std::mem::offset_of!(ft_eeprom_4232h, ADriveCurrent) - 18usize];
    ["Offset of field: ft_eeprom_4232h::BSlowSlew"]
        [::std::mem::offset_of!(ft_eeprom_4232h, BSlowSlew) - 19usize];
    ["Offset of field: ft_eeprom_4232h::BSchmittInput"]
        [::std::mem::offset_of!(ft_eeprom_4232h, BSchmittInput) - 20usize];
    ["Offset of field: ft_eeprom_4232h::BDriveCurrent"]
        [::std::mem::offset_of!(ft_eeprom_4232h, BDriveCurrent) - 21usize];
    ["Offset of field: ft_eeprom_4232h::CSlowSlew"]
        [::std::mem::offset_of!(ft_eeprom_4232h, CSlowSlew) - 22usize];
    ["Offset of field: ft_eeprom_4232h::CSchmittInput"]
        [::std::mem::offset_of!(ft_eeprom_4232h, CSchmittInput) - 23usize];
    ["Offset of field: ft_eeprom_4232h::CDriveCurrent"]
        [::std::mem::offset_of!(ft_eeprom_4232h, CDriveCurrent) - 24usize];
    ["Offset of field: ft_eeprom_4232h::DSlowSlew"]
        [::std::mem::offset_of!(ft_eeprom_4232h, DSlowSlew) - 25usize];
    ["Offset of field: ft_eeprom_4232h::DSchmittInput"]
        [::std::mem::offset_of!(ft_eeprom_4232h, DSchmittInput) - 26usize];
    ["Offset of field: ft_eeprom_4232h::DDriveCurrent"]
        [::std::mem::offset_of!(ft_eeprom_4232h, DDriveCurrent) - 27usize];
    ["Offset of field: ft_eeprom_4232h::ARIIsTXDEN"]
        [::std::mem::offset_of!(ft_eeprom_4232h, ARIIsTXDEN) - 28usize];
    ["Offset of field: ft_eeprom_4232h::BRIIsTXDEN"]
        [::std::mem::offset_of!(ft_eeprom_4232h, BRIIsTXDEN) - 29usize];
    ["Offset of field: ft_eeprom_4232h::CRIIsTXDEN"]
        [::std::mem::offset_of!(ft_eeprom_4232h, CRIIsTXDEN) - 30usize];
    ["Offset of field: ft_eeprom_4232h::DRIIsTXDEN"]
        [::std::mem::offset_of!(ft_eeprom_4232h, DRIIsTXDEN) - 31usize];
    ["Offset of field: ft_eeprom_4232h::ADriverType"]
        [::std::mem::offset_of!(ft_eeprom_4232h, ADriverType) - 32usize];
    ["Offset of field: ft_eeprom_4232h::BDriverType"]
        [::std::mem::offset_of!(ft_eeprom_4232h, BDriverType) - 33usize];
    ["Offset of field: ft_eeprom_4232h::CDriverType"]
        [::std::mem::offset_of!(ft_eeprom_4232h, CDriverType) - 34usize];
    ["Offset of field: ft_eeprom_4232h::DDriverType"]
        [::std::mem::offset_of!(ft_eeprom_4232h, DDriverType) - 35usize];
};
pub type FT_EEPROM_4232H = ft_eeprom_4232h;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct ft_eeprom_232h {
    pub common: FT_EEPROM_HEADER,
    pub ACSlowSlew: UCHAR,
    pub ACSchmittInput: UCHAR,
    pub ACDriveCurrent: UCHAR,
    pub ADSlowSlew: UCHAR,
    pub ADSchmittInput: UCHAR,
    pub ADDriveCurrent: UCHAR,
    pub Cbus0: UCHAR,
    pub Cbus1: UCHAR,
    pub Cbus2: UCHAR,
    pub Cbus3: UCHAR,
    pub Cbus4: UCHAR,
    pub Cbus5: UCHAR,
    pub Cbus6: UCHAR,
    pub Cbus7: UCHAR,
    pub Cbus8: UCHAR,
    pub Cbus9: UCHAR,
    pub FT1248Cpol: UCHAR,
    pub FT1248Lsb: UCHAR,
    pub FT1248FlowControl: UCHAR,
    pub IsFifo: UCHAR,
    pub IsFifoTar: UCHAR,
    pub IsFastSer: UCHAR,
    pub IsFT1248: UCHAR,
    pub PowerSaveEnable: UCHAR,
    pub DriverType: UCHAR,
}
